--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -37,6 +37,7 @@ commands:
     - "&c/koth rewards <koth> items|commands &f- &7Set the items and commands rewards for a koth"
     - "&c/koth stop <koth> &f- &7Stops an active koth"
     - "&c/koth list &f- &7List all server koths"
+    - "&c/koth schedulers add|list|remove|next &f- &7Manage the schedulers of koths"
   only-players: "&cOnly players can execute this."
   unknown-koth: "&cThat koth doesn't exists."
   invalid-number: "&cThe command requires a valid number."
@@ -126,4 +127,9 @@ commands:
       usage: "&cThe usage of the subcommand is: /koth schedulers list <koth>"
       empty: "&cThat koth don't have any schedulers yet!"
       header: "&9&lKoth Schedulers List:"
-      each: "&f - &a#%id% &f- &e%day% &f - &a%hour%:%minute%:%second%"
+      each: "&f - &a#%id% &f- &e%day% &f - &a%hour%:%minute%:%second% &f - duration: &d%duration%"
+    add:
+      usage: "&cThe usage of the subcommand is: /koth schedulers add <koth> <time (hh:mm:ss)> <duation>"
+      successfully: "&fYou add a new scheduler to koth &e%name% &fwith id &a%id%&f, at the days &9%day%&f at the &b%hour%:%minute%:%second% &fwith duration of &6%duration% &fseconds."
+      invalid-day-of-week: "&cYou didn't put an invalid day of week."
+      invalid-time-format: "&cThe time format you've to put is: &ehh:mm:ss"
