--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -133,3 +133,7 @@ commands:
       successfully: "&fYou add a new scheduler to koth &e%name% &fwith id &a%id%&f, at the days &9%day%&f at the &b%hour%:%minute%:%second% &fwith duration of &6%duration% &fseconds."
       invalid-day-of-week: "&cYou didn't put an invalid day of week."
       invalid-time-format: "&cThe time format you've to put is: &ehh:mm:ss"
+    remove:
+      usage: "&cThe usage of the subcommand is: /koth schedulers remove <koth> <id>"
+      out-of-index: "&cThat ID is out of indexes in schedulers list in that koth."
+      successfully: "&fYou remove the scheduler &a%id%&f for koth &e%name%&f."
