recode some things

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -1,5 +1,5 @@
 no-permission: "&cYou don't have permission!"
-
+prefix: "#86FF5C&lKoTH &8» "
 koth:
   no-one-dominating:
     - "<underline:a"
@@ -41,6 +41,12 @@ koth:
     - "<center> &ffor &e%duration% &fseconds of duration"
     - ""
     - "<underline:#ffff00"
+  start-infinite:
+    - "<underline:#ffff00"
+    - ""
+    - "<center> &fThe koth #ff0000%koth% &fhas started!"
+    - ""
+    - "<underline:#ffff00"
 commands:
   help:
     - "&a&lDamiXKoTH Help"
@@ -55,67 +61,70 @@ commands:
     - "&c/koth stop <koth> &f- &7Stops an active koth"
     - "&c/koth list &f- &7List all server koths"
     - "&c/koth schedulers add|list|remove|next &f- &7Manage the schedulers of koths"
-  only-players: "&cOnly players can execute this."
-  unknown-koth: "&cThat koth doesn't exists."
-  invalid-number: "&cThe command requires a valid number."
-  unknown-subcommand: "&cUnknown command, use /koth help to check commands list."
+  only-players: "%prefix% &cOnly players can execute this."
+  unknown-koth: "%prefix% &cThat koth doesn't exists."
+  invalid-number: "%prefix% &cThe command requires a valid number."
+  unknown-subcommand: "%prefix% &cUnknown command, use /koth help to check commands list."
   create:
-    usage: "&cThe usage of the command is: /koth create <name>"
-    invalid-name: "&cThe name %nam% has to be alphanumeric!"
-    already-exists: "&cA koth with that name already exists!"
-    error: "&cAn Exception occurred while creating koth. Check console for more information."
-    successfully: "&fYou create the koth &e%name%&f."
+    usage: "%prefix% &cThe usage of the command is: /koth create <name>"
+    invalid-name: "%prefix% &cThe name %nam% has to be alphanumeric!"
+    already-exists: "%prefix% &cA koth with that name already exists!"
+    error: "%prefix% &cAn Exception occurred while creating koth. Check console for more information."
+    successfully: "%prefix% &fYou create the koth &e%name%&f."
   remove:
-    usage: "&cThe usage of the command is: /koth remove <name>"
-    started: "&cThe koth %name% is started, you can't remove it!"
-    successfully: "&fYou remove the koth &c%name%&f."
+    usage: "%prefix% &cThe usage of the command is: /koth remove <name>"
+    started: "%prefix% &cThe koth %name% is started, you can't remove it!"
+    error: "%prefix% &cAn Exception occurred while removing the koth. Check console for more information."
+    successfully: "%prefix% &fYou remove the koth &c%name%&f."
   setcapturetime:
-    usage: "&cThe usage of the command is: /koth setcapturetime <koth> <seconds>"
-    successfully: "&fYou set the capture time of the koth &e%name% &fto &a%time%&f seconds."
+    usage: "%prefix% &cThe usage of the command is: /koth setcapturetime <koth> <seconds>"
+    successfully: "%prefix% &fYou set the capture time of the koth &e%name% &fto &a%time%&f seconds."
   setfirstposition:
-    usage: "&cThe usage of the command is: /koth setfirstposition <koth>"
-    started: "&cThe koth %name% is started, you can't change the first point while it is!"
-    not-solid-block: "&cYou have to target a solid block!"
-    successfully: "&fYou set the first point of the koth &e%name% &fto: &a%x%&f, &a%y%&f, &a%z%&f in the world &6%world%&f."
+    usage: "%prefix% &cThe usage of the command is: /koth setfirstposition <koth>"
+    started: "%prefix% &cThe koth %name% is started, you can't change the first point while it is!"
+    not-solid-block: "%prefix% &cYou have to target a solid block!"
+    successfully: "%prefix% &fYou set the first point of the koth &e%name% &fto: &a%x%&f, &a%y%&f, &a%z%&f in the world &6%world%&f."
   setsecondposition:
-    usage: "&cThe usage of the command is: /koth setsecondposition <koth>"
-    started: "&cThe koth %name% is started, you can't change the second point while it is!"
-    not-solid-block: "&cYou have to target a solid block!"
-    successfully: "&fYou set the second point of the koth &e%name% &fto: &a%x%&f, &a%y%&f, &a%z%&f in the world &6%world%&f."
+    usage: "%prefix% &cThe usage of the command is: /koth setsecondposition <koth>"
+    started: "%prefix% &cThe koth %name% is started, you can't change the second point while it is!"
+    not-solid-block: "%prefix% &cYou have to target a solid block!"
+    successfully: "%prefix% &fYou set the second point of the koth &e%name% &fto: &a%x%&f, &a%y%&f, &a%z%&f in the world &6%world%&f."
   start:
-    usage: "&cThe usage of the command is: /koth start <koth> <activeTime>"
-    error1: "&cThat koth can't start, the first point is not defined!"
-    error2: "&cThat koth can't start, the second point is not defined!"
-    error3: "&cThere are not rewards defined in that koth, it can't start!"
-    error4: "&cThe capture time on that koth has to be greater than 0!"
-    successfully: "&fYou start the koth &a%name% &ffor &e%time%&f seconds."
+    usage: "%prefix% &cThe usage of the command is: /koth start <koth> <activeTime>"
+    error1: "%prefix% &cThat koth can't start, the first point is not defined!"
+    error2: "%prefix% &cThat koth can't start, the second point is not defined!"
+    error3: "%prefix% &cThere are not rewards defined in that koth, it can't start!"
+    error4: "%prefix% &cThe capture time on that koth has to be greater than 0!"
+    invalid-activetime: "%prefix% &cYou have to set how much seconds the koth will be started or set 'INFINITE' for a infinite koth duration"
+    successfully: "%prefix% &fYou start the koth &a%name% &ffor &e%time%&f seconds."
+    successfully2: "%prefix% &fYou start the koth &a%name% &ffor infinite time until it is taked."
   rewards:
-    usage: "&cThe usage of the command is: /koth rewards items|commands"
-    started: "&cYou can't edit rewards of an active koth!"
-    usage1: "&cThe usage of the subcommand is: /koth rewards command <add|list|remove> [command line|id]"
+    usage: "%prefix% &cThe usage of the command is: /koth rewards <koth> items|commands"
+    started: "%prefix% &cYou can't edit rewards of an active koth!"
+    usage1: "%prefix% &cThe usage of the subcommand is: /koth rewards <koth> commands <add|list|remove> [command line|id]"
     commands:
-      empty: "&cThat koth don't have any commands as rewards yet!"
+      empty: "%prefix% &cThat koth don't have any commands as rewards yet!"
       list:
-        header: "&a&l%name%'s items reward list:"
-        each: "&a#%id%&f - &7%command%"
+        header: "%prefix% &a&l%name%'s items reward list:"
+        each: "%prefix% &a#%id%&f - &7%command%"
       add:
-        usage: "&cThe usage of the subcommand is: /koth rewards commands add <command line>"
-        successfully: "&fYou add the command &e%command%&f with id &a#%id%&f."
+        usage: "%prefix% &cThe usage of the subcommand is: /koth rewards commands add <command line>"
+        successfully: "%prefix% &fYou add the command &e%command%&f with id &a#%id%&f."
       remove:
-        usage: "&cThe usage of the subcommand is: /koth rewards commands remove <id>"
-        out-of-index: "&cThat ID is out of indexes in list of commands reward in that koth."
-        successfully: "&fYou remove the command &e%command%&f with id &a#%id%&f."
-    items-updated: "&fYou update the items reward of koth &e%koth%&f."
+        usage: "%prefix% &cThe usage of the subcommand is: /koth rewards <koth> commands remove <id>"
+        out-of-index: "%prefix% &cThat ID is out of indexes in list of commands reward in that koth."
+        successfully: "%prefix% &fYou remove the command &e%command%&f with id &a#%id%&f."
+    items-updated: "%prefix% &fYou update the items reward of koth &e%koth%&f."
   stop:
-    usage: "&cThe usage of the command is: /koth stop <koth>"
-    not-started: "&cThat koth is not started yet!"
-    successfully: "&fYou stop the koth &a%name%&f."
+    usage: "%prefix% &cThe usage of the command is: /koth stop <koth>"
+    not-started: "%prefix% &cThat koth is not started yet!"
+    successfully: "%prefix% &fYou stop the koth &a%name%&f."
   list:
-    empty-koths: "&cThere are not any koth created yet."
+    empty-koths: "%prefix% &cThere are not any koth created yet."
     header: "&a&lKoths list:"
     each: "&f - &e%name%&f - &bStarted: %started%"
   info:
-    usage: "&cThe usage of the command is: /koth info <koth>"
+    usage: "%prefix% &cThe usage of the command is: /koth info <koth>"
     header:
       - "&a&lKoth Info:"
       - ""
@@ -139,18 +148,22 @@ commands:
       - "&f Dominating Player: &a%dominating%"
       - "&f Dominating Time: &9%dominatingTime%"
   schedulers:
-    usage: "&cThe usage of the command is: /koth schedulers add|list|remove|next"
+    usage: "%prefix% &cThe usage of the command is: /koth schedulers add|list|remove|next"
     list:
-      usage: "&cThe usage of the subcommand is: /koth schedulers list <koth>"
-      empty: "&cThat koth don't have any schedulers yet!"
+      usage: "%prefix% &cThe usage of the subcommand is: /koth schedulers list <koth>"
+      empty: "%prefix% &cThat koth don't have any schedulers yet!"
       header: "&9&lKoth Schedulers List:"
       each: "&f - &a#%id% &f- &e%day% &f- &a%hour%:%minute%:%second% &f- duration: &d%duration%"
     add:
-      usage: "&cThe usage of the subcommand is: /koth schedulers add <koth> <day of week> <time (hh:mm:ss)> <duration>"
-      successfully: "&fYou add a new scheduler to koth &e%name% &fwith id &a%id%&f, at the days &9%day%&f at the &b%hour%:%minute%:%second% &fwith duration of &6%duration% &fseconds."
-      invalid-day-of-week: "&cYou didn't put an invalid day of week."
-      invalid-time-format: "&cThe time format you've to put is: &ehh:mm:ss"
+      usage: "%prefix% &cThe usage of the subcommand is: /koth schedulers add <koth> <day of week> <time (hh:mm:ss)> <duration>"
+      successfully: "%prefix% &fYou add a new scheduler to koth &e%name% &fwith id &a%id%&f, at the days &9%day%&f at the &b%hour%:%minute%:%second% &fwith duration of &6%duration% &fseconds."
+      successfully2: "%prefix% &fYou add a new scheduler to koth &e%name% &fwith id &a%id%&f, at the days &9%day%&f at the &b%hour%:%minute%:%second% &fwith a inifite duration."
+      invalid-day-of-week: "%prefix% &cYou didn't put an invalid day of week."
+      invalid-time-format: "%prefix% &cThe time format you've to put is: &ehh:mm:ss"
     remove:
-      usage: "&cThe usage of the subcommand is: /koth schedulers remove <koth> <id>"
-      out-of-index: "&cThat ID is out of indexes in schedulers list in that koth."
-      successfully: "&fYou remove the scheduler &a%id%&f for koth &e%name%&f."
+      usage: "%prefix% &cThe usage of the subcommand is: /koth schedulers remove <koth> <id>"
+      out-of-index: "%prefix% &cThat ID is out of indexes in schedulers list in that koth."
+      successfully: "%prefix% &fYou remove the scheduler &a%id%&f for koth &e%name%&f."
+
+# DON'T TOUCH THIS
+config-version: 1
